[package]
name = "hpm6750-pac"
version = "0.1.0"
authors = [
    "Luo Jia <me@luojia.cc>",
    "tfx2001 <tfx2001@outlook.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1"
riscv = "0.9.0"
vcell = "0.1.3"
