[package]
name = "hpm6750-pac"
version = "0.0.0"
description = "Peripheral Access Crate for HPMicro HPM6750 chip series"
authors = [
    "Luo Jia <me@luojia.cc>",
    "tfx2001 <tfx2001@outlook.com>",
]
repository = "https://github.com/rustsbi/hpm6750-pac"
documentation = "https://docs.rs/hpm6750-pac"
license = "MulanPSL-2.0"
readme = "README.md"
keywords = ["no-std", "riscv", "hpm", "peripherals", "pac"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcell = "0.1.3"
